Disable code for scrollmagic animations. Remove visibility: hidden css property on card-about element. Add prefix to nav-container property in css to test fix of mobile display issue.

--- a/app/assets/stylesheets/card-styles.scss
+++ b/app/assets/stylesheets/card-styles.scss
@@ -6,7 +6,7 @@ $card-hover-color: rgba(80, 163, 231, 0.9);
   @include span-columns(4);
   @include omega(3n);
   text-align: center;
-  visibility: hidden;
+  // visibility: hidden;
 }
 
 .cards {
